<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.payments.PaymentsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/informationTextViewPaymentsFragment"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/round_button"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/informationTextViewPaymentsFragment"
                app:layout_constraintTop_toTopOf="parent">


                <Button
                    android:id="@+id/withdrawBtnPaymentsFragment"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_blue_gradient"
                    android:text="@string/withdrawal_n_cash"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/transferBtnPaymentsFragment"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_blue_gradient"
                    android:text="@string/transfer"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/exchangeBtnPaymentsFragment"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_blue_gradient"
                    android:text="@string/exchange_n"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/depositBtnPaymentsFragment"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_blue_gradient"
                    android:text="@string/deposit_n_cash"
                    android:textSize="11sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>